--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="hello">Hello World, Hackathon2Activity!</string>
     <string name="app_name">Hackathon2</string>
+    <string name="send">SEND</string>
+    <string name="incoming">INCOMING</string>
 </resources>
