--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="app_name">Hackathon2</string>
     <string name="send">SEND</string>
     <string name="incoming">INCOMING</string>
+    <string name="outgoing">OUTGOING</string>
 </resources>
