--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="send">SEND</string>
     <string name="incoming">INCOMING</string>
     <string name="outgoing">OUTGOING</string>
+    <string name="contact_retrieval_error">Error retrieving contact information</string>
 </resources>
