--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="outgoing">OUTGOING</string>
     <string name="no_incoming">No incoming friends.</string>
     <string name="contact_retrieval_error">Error retrieving contact information</string>
+    <string name="no_location">Failed accessing location data</string>
 </resources>
