--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, Hackathon2Activity!</string>
-    <string name="app_name">Hackathon2</string>
+    <string name="app_name">Where the Hack Are You?</string>
     <string name="send">SEND</string>
     <string name="incoming">INCOMING</string>
     <string name="outgoing">OUTGOING</string>
